@@ -1,3 +1,12 @@
+r13:
++ Completed mesh support for Patch/Ropes. You can new use getMesh() [Only for patch] or setDraw(true) [Only for Rope] to draw the objects
+
+r12:
++ Added mesh support for basic soft bodies (Patch and Rope). You can now use the getMesh() function to retrieve the mesh to attach to a node
+
+r8-r11:
++ New Wiki Article. SVN syncronized
+
 r7:
 + World's destructor optimized. Needed due to soft-body preparation
 + Added Soft Body Implementation (Minimal). In the next releases the implementation will be improved.
